@@ -231,72 +231,12 @@ $calc_tech         = array ("hull", "engines", "computer", "armor", "shields", "
 $calc_ship_tech    = array ("hull", "engines", "computer", "armor", "shields", "beams", "torp_launchers");
 $calc_planet_tech  = array ("hull", "engines", "computer", "armor", "shields", "beams", "torp_launchers");
 
-// Auto detect and set the game path (uses the logic from setup_info)
-// If it does not work, please comment this out and set it in db_config.php instead.
-// But PLEASE also report that it did not work for you at the main BNT forums (forums.blacknova.net)
-$gamepath = dirname ($_SERVER['PHP_SELF']);
-if (isset ($gamepath) && strlen ($gamepath) > 0)
-{
-    if ($gamepath === "\\")
-    {
-        $gamepath = "/";
-    }
-
-    if ($gamepath[0] != ".")
-    {
-        if ($gamepath[0] != "/")
-        {
-            $gamepath = "/$gamepath";
-        }
-
-        if ($gamepath[strlen ($gamepath)-1] != "/")
-        {
-            $gamepath = "$gamepath/";
-        }
-    }
-    else
-    {
-        $gamepath ="/";
-    }
-    $gamepath = str_replace ("\\", "/", stripcslashes ($gamepath));
-} // Game path setting ends
-
-// Auto detect and set the Game domain setting (uses the logic from setup_info)
+// Auto detect and set the game path & game domain (uses the logic from setup_info)
 // If it does not work, please comment this out and set it in db_config.php instead.
 // But PLEASE also report that it did not work for you at the main BNT forums (forums.blacknova.net)
 
-$remove_port = true;
-$gamedomain = $_SERVER['HTTP_HOST'];
-
-if (isset ($gamedomain) && strlen ($gamedomain) >0)
-{
-    $pos = strpos ($gamedomain, "http://");
-    if (is_integer ($pos))
-    {
-        $gamedomain = substr ($gamedomain, $pos+7);
-    }
-
-    $pos = strpos ($gamedomain, "www.");
-    if (is_integer ($pos))
-    {
-        $gamedomain = substr ($gamedomain, $pos+4);
-    }
-
-    if ($remove_port)
-    {
-        $pos = strpos ($gamedomain, ":");
-    }
-
-    if (is_integer ($pos))
-    {
-        $gamedomain = substr ($gamedomain, 0, $pos);
-    }
-
-    if ($gamedomain[0] != ".")
-    {
-        $gamedomain = ".$gamedomain";
-    }
-} // Game domain setting ends
+$gamepath = \bnt\setPaths::setGamepath();
+$gamedomain = \bnt\setPaths::setGamedomain();
 
 // Ok, here we raise EVENT_TICK which is called every page load, this saves us from having to add new lines to support new features.
 // This is used for ingame stuff and Plug-ins that need to be called on every page load.
