@@ -2,7 +2,7 @@
 
 // autoload_real.php generated by Composer
 
-class ComposerAutoloaderInitcb505e47d508b3eef71f860061dbab5e
+class ComposerAutoloaderInit8f346190d9597d5578e3b91dd5bac597
 {
     private static $loader;
 
@@ -19,9 +19,9 @@ class ComposerAutoloaderInitcb505e47d508b3eef71f860061dbab5e
             return self::$loader;
         }
 
-        spl_autoload_register(array('ComposerAutoloaderInitcb505e47d508b3eef71f860061dbab5e', 'loadClassLoader'));
+        spl_autoload_register(array('ComposerAutoloaderInit8f346190d9597d5578e3b91dd5bac597', 'loadClassLoader'));
         self::$loader = $loader = new \Composer\Autoload\ClassLoader();
-        spl_autoload_unregister(array('ComposerAutoloaderInitcb505e47d508b3eef71f860061dbab5e', 'loadClassLoader'));
+        spl_autoload_unregister(array('ComposerAutoloaderInit8f346190d9597d5578e3b91dd5bac597', 'loadClassLoader'));
 
         $vendorDir = dirname(__DIR__);
         $baseDir = dirname($vendorDir);
