@@ -1,3 +1,7 @@
+TheKabal (24 February 2013)
+--------------------------------------
+Moved setGamepath and setGamedomain out into autoloaded classes, reducing the size of common.php
+
 TheKabal (23 February 2013)
 --------------------------------------
 Add a Registry class to BNT, which will hold variables we previously used in the global space (timer, lang, etc)
